--- a/android/app/src/main/res/drawable/background_splash.xml
+++ b/android/app/src/main/res/drawable/background_splash.xml
@@ -3,9 +3,9 @@
 
 
     <item
-            android:width="233dp"
-            android:height="233dp"
-            android:drawable="@mipmap/icon"
+            android:width="300dp"
+            android:height="600dp"
+            android:drawable="@drawable/splashscreen"
             android:gravity="center"/>
 
 </layer-list>
