--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -2,8 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-    <ImageView android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:src="@mipmap/splash" />
+    android:layout_height="fill_parent"
+              android:background="@color/primary_light"
+>
+    <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/splash"
+            android:gravity="center"/>
 </LinearLayout>
