--- a/ios/GuruQ/LaunchScreen.storyboard
+++ b/ios/GuruQ/LaunchScreen.storyboard
@@ -7,11 +7,6 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="SegoeUI-Semibold.ttf">
-            <string>SegoeUI-Semibold</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -21,45 +16,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashIcon" translatesAutoresizingMaskIntoConstraints="NO" id="iZL-sK-2xV">
-                                <rect key="frame" x="91" y="198" width="233" height="233"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="iZL-sK-2xV">
+                                <rect key="frame" x="91" y="99" width="233" height="698"/>
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tutors and Institutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2r-E0-EAK">
-                                <rect key="frame" x="114.5" y="407" width="186" height="27"/>
-                                <fontDescription key="fontDescription" name="SegoeUI-Semibold" family="Segoe UI" pointSize="20"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find the best" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGu-r2-N8h">
-                                <rect key="frame" x="148" y="378" width="119" height="27"/>
-                                <fontDescription key="fontDescription" name="SegoeUI-Semibold" family="Segoe UI" pointSize="20"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powered by RHA Technologies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbp-Dy-WGo">
-                                <rect key="frame" x="109" y="825" width="197" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="17" id="G1n-6E-dQE"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="0.40780574079999998" green="0.57027918099999997" blue="0.75071150060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="0.1117663607" green="0.3403634727" blue="0.60294657949999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="XGu-r2-N8h" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="334" id="7qs-vm-4xf"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="iZL-sK-2xV" secondAttribute="trailing" constant="90" id="Emz-Yr-3Wv"/>
+                            <constraint firstItem="iZL-sK-2xV" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="ITw-nl-osq"/>
+                            <constraint firstItem="iZL-sK-2xV" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="Op9-0q-kyi"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="iZL-sK-2xV" secondAttribute="trailing" id="Q4O-63-011"/>
+                            <constraint firstItem="iZL-sK-2xV" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="QQp-P0-94N"/>
                             <constraint firstItem="iZL-sK-2xV" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="91" id="SQW-xc-guc"/>
-                            <constraint firstItem="Jbp-Dy-WGo" firstAttribute="centerX" secondItem="iZL-sK-2xV" secondAttribute="centerX" id="Tnl-th-8MG"/>
-                            <constraint firstItem="u2r-E0-EAK" firstAttribute="top" secondItem="XGu-r2-N8h" secondAttribute="bottom" constant="2" id="Wc1-h6-etR"/>
-                            <constraint firstItem="Jbp-Dy-WGo" firstAttribute="top" secondItem="iZL-sK-2xV" secondAttribute="bottom" constant="394" id="ZCy-ir-aXK"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="Jbp-Dy-WGo" secondAttribute="bottom" constant="20" id="bfe-sF-HrS"/>
+                            <constraint firstAttribute="bottom" secondItem="iZL-sK-2xV" secondAttribute="bottom" id="WjM-18-OK1"/>
                             <constraint firstItem="iZL-sK-2xV" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="154" id="dUs-dB-cQk"/>
-                            <constraint firstItem="Jbp-Dy-WGo" firstAttribute="centerX" secondItem="u2r-E0-EAK" secondAttribute="centerX" id="xv7-BI-PPp"/>
-                            <constraint firstItem="Jbp-Dy-WGo" firstAttribute="centerX" secondItem="XGu-r2-N8h" secondAttribute="centerX" id="yUt-Vu-hsU"/>
+                            <constraint firstItem="iZL-sK-2xV" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="lPb-k0-pv7"/>
+                            <constraint firstAttribute="bottom" secondItem="iZL-sK-2xV" secondAttribute="bottom" id="tCT-ok-QUT"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -69,6 +43,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="SplashIcon" width="341.5" height="341.5"/>
+        <image name="splash" width="562.5" height="1218"/>
     </resources>
 </document>
